[tool.poetry]
name = "yesbut-backend"
version = "0.1.0"
description = "YesBut MVP Backend - Multi-Agent Collaborative Brainstorming System API"
authors = ["YesBut Team"]
readme = "README.md"
packages = [{include = "app"}, {include = "agents"}, {include = "algorithms"}, {include = "optimization"}, {include = "mcp"}, {include = "tasks"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.0"
celery = {extras = ["redis"], version = "^5.3.0"}
langchain = "^0.1.0"
langgraph = "^0.0.20"
langchain-anthropic = "^0.1.0"
langchain-openai = "^0.0.5"
sse-starlette = "^1.8.0"
python-socketio = "^5.10.0"
httpx = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
structlog = "^24.1.0"
pgvector = "^0.2.4"
numpy = "^1.26.0"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
